Modification du css et de l'html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,21 @@
         
     </div>
     <footer>
-        
+        <div class="navbarBottom">
+            <div class="logoSiteFooter">
+                <p src="" alt="" class="logo"><span>be</span>movies</p>
+            </div>
+            <ul class="nav">
+                <li>Search</li>
+                <li>Latest</li>
+                <li>Genres</li>
+                <li>Register</li>
+                <li>Sign in</li>
+            </ul>
+            <div class="copyright">
+                <p>@2023 - All rights reserved</p>
+            </div>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
